--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
                 <td>Pokemon Go</td>
             </tr>
         </tbody>
-
     </table>
+<h3> See my work:</h3>
+<ul>
+    <li>
+        <a href="https://github.com/chuckloveall/python-api-weather">Github Repo for Weather API</a>
+    </li>
+</ul>
 </body>
 
 </html>
